--- a/YuLauncher/Core/Window/Pages/XamlCreateGameDialogInterface/WebSaver.xaml
+++ b/YuLauncher/Core/Window/Pages/XamlCreateGameDialogInterface/WebSaver.xaml
@@ -23,6 +23,14 @@
                 </StackPanel>
             </ScrollViewer>
             <ui:ToggleSwitch x:Name="WebviewSwitch" Content="{lex:Loc SimpleUseWebview}" Initialized="FrameworkElement_OnInitialized"/>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock x:Name="MultipleLaunchText" Text="{lex:Loc MultipleLaunchText}" />
+                <ScrollViewer>
+                    <StackPanel x:Name="MultiplePanel" Orientation="Vertical">
+                    
+                    </StackPanel>
+                </ScrollViewer>    
+            </StackPanel>
         </StackPanel>
         <ui:Button x:Name="SaveButton" Content="{lex:Loc SimpleSave}" Click="SaveButton_OnClick" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
     </Grid>
