UIレイアウトとイベントハンドラの改善
`PropertyDialog.xaml` にウィンドウの最小サイズを設定しました。
`Application.xaml`、`Web.xaml`、`WebGame.xaml`、`WebSaver.xaml` のレイアウトを `StackPanel` から `Grid` に変更し、`TextBox` を `ScrollViewer` でラップしました。また、`SaveButton` の位置を変更しました。
各 `.cs` ファイルに `System.Windows.Data` のインポートを追加し、`CheckBox` の生成方法を変更しました。さらに、`Width` プロパティのバインディングを追加し、ウィンドウサイズ変更時に `TextBox` の幅を調整するイベントハンドラを追加しました。

--- a/YuLauncher/Core/Window/Pages/PropertyDialog.xaml
+++ b/YuLauncher/Core/Window/Pages/PropertyDialog.xaml
@@ -12,7 +12,7 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         MouseDown="PropertyDialog_OnMouseDown"
-        Title="PropertyDialog"  Width="400" Height="300">
+        Title="PropertyDialog" MinWidth="400" MinHeight="300"  Width="400" Height="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="28"/>
