--- a/YuLauncher/Core/Window/Pages/XamlCreateGameDialogInterface/Web.xaml
+++ b/YuLauncher/Core/Window/Pages/XamlCreateGameDialogInterface/Web.xaml
@@ -7,22 +7,40 @@
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:lex="http://wpflocalizeextension.codeplex.com"
              lex:LocalizeDictionary.DesignCulture="ja-JP"
+             SizeChanged="Web_OnSizeChanged"
              lex:ResxLocalizationProvider.DefaultAssembly="YuLauncher"
              lex:ResxLocalizationProvider.DefaultDictionary="Language"
              mc:Ignorable="d">
     <Grid>
-        <StackPanel Orientation="Vertical">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+        
             <StackPanel Orientation="Horizontal">
                 <ui:TextBlock x:Name="NameTextBlock" Text="{lex:Loc SimpleName}" VerticalAlignment="Center"/>
-                <ui:TextBox x:Name="NameBox" Text="" VerticalAlignment="Center"/>
+                <ScrollViewer>
+                <ui:TextBox x:Name="NameBox" Text=""/>
+                </ScrollViewer>
             </StackPanel>
-            <ScrollViewer>
+         </Grid>
+        <Grid Grid.Row="1">
+           
                 <StackPanel Orientation="Horizontal">
                     <ui:TextBlock x:Name="UrlTextBlock" Text="{lex:Loc SimpleAddress}" VerticalAlignment="Center"/>
-                    <ui:TextBox x:Name="UrlBox" Text="" VerticalAlignment="Center"/>
+                    <ScrollViewer HorizontalScrollBarVisibility="Auto">
+                    <ui:TextBox x:Name="UrlBox" Text=""/>
+                    </ScrollViewer>
                 </StackPanel>
-            </ScrollViewer>
+            </Grid>
+        <Grid Grid.Row="2">
             <ui:ToggleSwitch x:Name="WebviewSwitch" Content="{lex:Loc SimpleUseWebview}" Initialized="FrameworkElement_OnInitialized"/>
+            </Grid>
+        <Grid Grid.Row="3">
             <StackPanel Orientation="Horizontal">
                 <TextBlock x:Name="MultipleLaunchText" Text="{lex:Loc MultipleLaunchText}" />
                 <ScrollViewer>
@@ -31,7 +49,9 @@
                     </StackPanel>
                 </ScrollViewer>    
             </StackPanel>
-        </StackPanel>
-        <ui:Button x:Name="SaveButton" Content="{lex:Loc SimpleSave}" Click="SaveButton_OnClick" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
+        </Grid>
+        <Grid Grid.Row="4" HorizontalAlignment="Right">
+        <ui:Button x:Name="SaveButton" Content="{lex:Loc SimpleSave}" Click="SaveButton_OnClick"/>
+        </Grid>
     </Grid>
 </local:DialogInterface>
