--- a/YuLauncher/Core/Window/Pages/SettingPage.xaml
+++ b/YuLauncher/Core/Window/Pages/SettingPage.xaml
@@ -1,60 +1,27 @@
-﻿<Page        x:Class="YuLauncher.Core.Window.Pages.SettingPage"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:properties="clr-namespace:YuLauncher.Properties"
-             xmlns:cal="http://www.caliburnproject.org"
-             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-             xmlns:lex="http://wpflocalizeextension.codeplex.com"
-             lex:LocalizeDictionary.DesignCulture="ja-JP"
-             lex:ResxLocalizationProvider.DefaultAssembly="YuLauncher"
-             lex:ResxLocalizationProvider.DefaultDictionary="Language"
-             MinWidth="800" MinHeight="400"
-             mc:Ignorable="d">
+﻿<Page x:Class="YuLauncher.Core.Window.Pages.SettingPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:properties="clr-namespace:YuLauncher.Properties"
+      xmlns:cal="http://www.caliburnproject.org"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+      xmlns:lex="http://wpflocalizeextension.codeplex.com"
+      lex:LocalizeDictionary.DesignCulture="ja-JP"
+      lex:ResxLocalizationProvider.DefaultAssembly="YuLauncher"
+      lex:ResxLocalizationProvider.DefaultDictionary="Language"
+      MinWidth="800" MinHeight="400"
+      mc:Ignorable="d">
+    
 
     <Grid>
-        <ScrollViewer>
-        <StackPanel>
-            <ui:TextBlock Text="{lex:Loc SimpleRes}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold"/>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <ui:TextBlock Text="{lex:Loc SimpleFullScreen}" FontSize="15"/>
-            <CheckBox x:Name="FullSc" Content="ON/OFF" IsChecked="False" HorizontalAlignment="Right" VerticalAlignment="Stretch" Loaded="FullSc_OnLoaded" Checked="FullSc_OnChecked" Unchecked="FullSc_OnUnchecked"/>
-            </StackPanel>
-            
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <ui:TextBlock Text="{lex:Loc SettingResChange}" Height="30" FontSize="15"/>
-                <ui:TextBox x:Name="TxtResWidth" HorizontalAlignment="Right" Text=""/>
-                <ui:TextBox x:Name="TxtResHeight" HorizontalAlignment="Right" Text=""/>
-            </StackPanel>
-            
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <ui:TextBlock Text="{lex:Loc MainWindowResChange}" Height="30" FontSize="15"/>
-                <ui:TextBox x:Name="MenuTxtResWidth" HorizontalAlignment="Center" Text=""/>
-                <ui:TextBox x:Name="MenuTxtResHeight" HorizontalAlignment="Center" Text=""/>
-            </StackPanel>
-            
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <ui:TextBlock Text="{lex:Loc GameWindowResChange}" Height="30" FontSize="15"/>
-                <ui:TextBox x:Name="GameTxtResWidth" HorizontalAlignment="Center" Text=""/>
-                <ui:TextBox x:Name="GameTxtResHeight" HorizontalAlignment="Center" Text=""/>
-            </StackPanel>
-            
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <ui:TextBlock Text="{lex:Loc MemoWindowResChange}" Height="30" FontSize="15"/>
-                <ui:TextBox x:Name="MemoTxtResWidth" HorizontalAlignment="Center" Text=""/>
-                <ui:TextBox x:Name="MemoTxtResHeight" HorizontalAlignment="Center" Text=""/>
-                <ui:TextBlock Text="{lex:Loc SimpleFontSize}" Height="30" FontSize="15"/>
-                <ui:TextBox x:Name="MemoTxtFontSize" HorizontalAlignment="Center" Text=""/>
-            </StackPanel>
-            
-                <ui:TextBlock Text="{lex:Loc SimpleLanguage}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" Loaded="FrameworkElement_OnLoaded"/>
-            <ComboBox x:Name="LanguageCombo">
-                <ComboBoxItem x:Name="EngItemCombo" Content="{lex:Loc SimpleEnglish}"/>
-                <ComboBoxItem x:Name="JpnItemCombo" Content="{lex:Loc SimpleJapanese}"/>
-            </ComboBox>
-            <ui:Button x:Name="SaveBtn" Margin="0,50" Content="{lex:Loc SimpleSave}" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Click="SaveBtn_OnClick"/>
-            </StackPanel>
-         </ScrollViewer>
-        </Grid>
+        <ui:NavigationView PaneDisplayMode="LeftMinimal" IsPaneOpen="False">
+          <ui:NavigationView.MenuItems>
+              <ui:NavigationViewItem Click="ButtonBase_OnClick" Icon="{ui:SymbolIcon Video16}"/>
+          </ui:NavigationView.MenuItems>
+            <ui:NavigationView.ContentOverlay>
+                <Frame x:Name="ContentFrame"/>
+            </ui:NavigationView.ContentOverlay>
+            </ui:NavigationView>
+    </Grid>
 </Page>
