データのImport Export機能追加
wpf.uiのバグに対応するようにThemePagePatcherで一括で変更するようにライブラリ追加

--- a/YuLauncher/Core/Window/Pages/SettingPage.xaml
+++ b/YuLauncher/Core/Window/Pages/SettingPage.xaml
@@ -11,13 +11,15 @@
       lex:ResxLocalizationProvider.DefaultAssembly="YuLauncher"
       lex:ResxLocalizationProvider.DefaultDictionary="Language"
       MinWidth="800" MinHeight="400"
+      Loaded="SettingPage_OnLoaded"
       mc:Ignorable="d">
     
 
     <Grid>
         <ui:NavigationView PaneDisplayMode="LeftMinimal" IsPaneOpen="False">
-          <ui:NavigationView.MenuItems>
-              <ui:NavigationViewItem Click="ButtonBase_OnClick" Icon="{ui:SymbolIcon Video16}"/>
+            <ui:NavigationView.MenuItems>
+                <ui:NavigationViewItem x:Name="GeneralItem" Click="GeneralItem_OnClick" Icon="{ui:SymbolIcon WindowDevTools16}"/>
+                <ui:NavigationViewItem x:Name="VideoVisualItem" Click="VideoVisualItem_OnClick" Icon="{ui:SymbolIcon Video16}"/>
           </ui:NavigationView.MenuItems>
             <ui:NavigationView.ContentOverlay>
                 <Frame x:Name="ContentFrame"/>
