メモウィンドウのバグ修正

--- a/YuLauncher/Core/Window/MemoWindow.xaml
+++ b/YuLauncher/Core/Window/MemoWindow.xaml
@@ -21,7 +21,7 @@
         </Grid.RowDefinitions>
         <Grid x:Name="Grid" Grid.Row="0">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <ToggleButton x:Name="ModeButton" Content="{lex:Loc EditModeButton}" Checked="ModeButton_OnChecked" Unchecked="ModeButton_OnUnchecked"/>
+                <ToggleButton x:Name="ModeButton" IsChecked="False" Content="{lex:Loc EditModeButton}" Checked="ModeButton_OnChecked" Unchecked="ModeButton_OnUnchecked"/>
                 <ui:Button x:Name="MinimizeBtn" Click="MinimizeBtn_OnClick">
                     <ui:FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xe921;" FontSize="20"/>
                 </ui:Button>
