--- a/YuLauncher/Game/Window/GameWindow.xaml
+++ b/YuLauncher/Game/Window/GameWindow.xaml
@@ -23,12 +23,14 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <Menu PreviewMouseLeftButtonDown="Menu_PreviewMouseLeftButtonDown" Grid.Column="0">
-                <MenuItem Header="機能">
-                    <MenuItem Header="Wiki"/>
+            <Menu Grid.Column="0">
+                <MenuItem Header="{lex:Loc SimpleBrowser}">
+                    <MenuItem x:Name="BackItem" Header="{lex:Loc SimpleBack}" Click="BackItem_OnClick"/>
+                    <MenuItem x:Name="ReloadItem" Header="{lex:Loc SimpleReload}" Click="ReloadItem_OnClick"/>
+                    <MenuItem x:Name="ForwardItem" Header="{lex:Loc SimpleForward}" Click="ForwardItem_OnClick"/>
                 </MenuItem>
-                <MenuItem Header="アプリケーション">
-                    <MenuItem Header="設定"/>
+                <MenuItem Header="{lex:Loc SimpleApplication}">
+                    <MenuItem x:Name="SettingItem" Header="{lex:Loc SimpleSetting}" Click="SettingItem_OnClick"/>
                 </MenuItem>
             </Menu>
             <StackPanel Grid.Column="1" Orientation="Horizontal">
