アップデート関係を少し改善

--- a/YuLauncher/Core/Window/Pages/SettingPage.xaml
+++ b/YuLauncher/Core/Window/Pages/SettingPage.xaml
@@ -18,8 +18,8 @@
     <Grid>
         <ui:NavigationView PaneDisplayMode="LeftMinimal" IsPaneOpen="False">
             <ui:NavigationView.MenuItems>
-                <ui:NavigationViewItem x:Name="GeneralItem" Click="GeneralItem_OnClick" Icon="{ui:SymbolIcon WindowDevTools16}"/>
-                <ui:NavigationViewItem x:Name="VideoVisualItem" Click="VideoVisualItem_OnClick" Icon="{ui:SymbolIcon Video16}"/>
+                <ui:NavigationViewItem x:Name="GeneralItem" Content="{lex:Loc SimpleGeneral}" Click="GeneralItem_OnClick" Icon="{ui:SymbolIcon WindowDevTools16}"/>
+                <ui:NavigationViewItem x:Name="VideoVisualItem" Content="{lex:Loc VideoGraphics}" Click="VideoVisualItem_OnClick" Icon="{ui:SymbolIcon Video16}"/>
           </ui:NavigationView.MenuItems>
             <ui:NavigationView.ContentOverlay>
                 <Frame x:Name="ContentFrame"/>
