--- a/YuLauncher/Core/Window/Pages/XamlCreateGameDialogInterface/Application.xaml
+++ b/YuLauncher/Core/Window/Pages/XamlCreateGameDialogInterface/Application.xaml
@@ -18,6 +18,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
@@ -51,7 +52,13 @@
                 </ScrollViewer>    
             </StackPanel>
         </Grid>
-        <Grid Grid.Row="4" HorizontalAlignment="Right">
+        <Grid Grid.Row="4">
+            <StackPanel Orientation="Vertical">
+                <TextBlock Text="{lex:Loc SimpleGenreManage}"/>
+                <ui:Button x:Name="GenreManageButton" Content="{lex:Loc SImpleManage}" Click="GenreManageButton_OnClick"/>
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Row="5" HorizontalAlignment="Right">
             <ui:Button x:Name="SaveButton" Content="{lex:Loc SimpleSave}" Click="SaveButton_OnClick"/>
         </Grid>
     </Grid>
