--- a/YuLauncher/Game/Window/GameWindow.xaml
+++ b/YuLauncher/Game/Window/GameWindow.xaml
@@ -14,40 +14,46 @@
                  lex:ResxLocalizationProvider.DefaultAssembly="YuLauncher"
                  Closing="GameWindow_OnClosing"
                  SizeChanged="GameWindow_OnSizeChanged"
+                    MouseDown= "UIElement_OnPreviewMouseLeftButtonDown"
                  Title="GameWindow" WindowStartupLocation="CenterScreen">
 
 <Grid>
-    <DockPanel x:Name="gamedock">
-        <Grid DockPanel.Dock="Top" MouseMove="UIElement_OnMouseMove">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <Menu Grid.Column="0">
-                <MenuItem Header="{lex:Loc SimpleBrowser}">
-                    <MenuItem x:Name="BackItem" Header="{lex:Loc SimpleBack}" Click="BackItem_OnClick"/>
-                    <MenuItem x:Name="ReloadItem" Header="{lex:Loc SimpleReload}" Click="ReloadItem_OnClick"/>
-                    <MenuItem x:Name="ForwardItem" Header="{lex:Loc SimpleForward}" Click="ForwardItem_OnClick"/>
-                    <MenuItem x:Name="WikiDataContentItem" Header="{lex:Loc WikiData}"/>
-                </MenuItem>
-                <MenuItem Header="{lex:Loc SimpleApplication}">
-                    <MenuItem x:Name="SettingItem" Header="{lex:Loc SimpleSetting}" Click="SettingItem_OnClick"/>
-                    <MenuItem x:Name="WikiDataItem" Header="{lex:Loc SimpleWikiDataManage}" Click="WikiDataItem_OnClick"/>
-                </MenuItem>
-            </Menu>
-            <StackPanel Grid.Column="1" Orientation="Horizontal">
-                <ui:Button x:Name="MinimizeBtn" Click="MinimizeBtn_OnClick">
-                    <ui:FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xe921;" FontSize="20"/>
-                </ui:Button>
-                <ToggleButton Grid.Column="1" x:Name="WindowStateBtn" Checked="WindowStateBtn_OnChecked" Unchecked="WindowStateBtn_OnUnchecked" IsChecked="False">
+    <Grid.RowDefinitions>
+        <RowDefinition Height="50"/>
+        <RowDefinition Height="*"/>
+    </Grid.RowDefinitions>
+    
+   
+    <Grid Grid.Row="0" MouseDown="menu_OnMouseMove">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <Menu Grid.Column="0" IsHitTestVisible="False">
+            <MenuItem Header="{lex:Loc SimpleBrowser}">
+                <MenuItem x:Name="BackItem" Header="{lex:Loc SimpleBack}" Click="BackItem_OnClick"/>
+                <MenuItem x:Name="ReloadItem" Header="{lex:Loc SimpleReload}" Click="ReloadItem_OnClick"/>
+                <MenuItem x:Name="ForwardItem" Header="{lex:Loc SimpleForward}" Click="ForwardItem_OnClick"/>
+                <MenuItem x:Name="WikiDataContentItem" Header="{lex:Loc WikiData}"/>
+            </MenuItem>
+            <MenuItem Header="{lex:Loc SimpleApplication}">
+                <MenuItem x:Name="SettingItem" Header="{lex:Loc SimpleSetting}" Click="SettingItem_OnClick"/>
+                <MenuItem x:Name="WikiDataItem" Header="{lex:Loc SimpleWikiDataManage}" Click="WikiDataItem_OnClick"/>
+            </MenuItem>
+        </Menu>
+        <StackPanel Grid.Column="1" Orientation="Horizontal">
+            <ui:Button x:Name="MinimizeBtn" Click="MinimizeBtn_OnClick">
+                <ui:FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xe921;" FontSize="20"/>
+            </ui:Button>
+            <ToggleButton x:Name="WindowStateBtn" Checked="WindowStateBtn_OnChecked" Unchecked="WindowStateBtn_OnUnchecked" IsChecked="False">
                 <ui:FontIcon x:Name="WindowStateIcon" FontFamily="Segoe Fluent Icons" FontSize="20"/>
             </ToggleButton>
-            <ui:Button x:Name="ExitBtn" Grid.Column="1" Click="ExitBtn_OnClick">
+            <ui:Button x:Name="ExitBtn" Click="ExitBtn_OnClick">
                 <ui:FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xf78a;" FontSize="20"/>
             </ui:Button>
-            </StackPanel>
-        </Grid>
-        <wv2:WebView2 Name="WebView"/>
-    </DockPanel>
+        </StackPanel>
+    </Grid>
+    
+        <wv2:WebView2 Grid.Row="1"  Name="WebView"/>
     </Grid>
 </ui:FluentWindow>
