--- a/YuLauncher/Game/Window/GameWindow.xaml
+++ b/YuLauncher/Game/Window/GameWindow.xaml
@@ -1,4 +1,5 @@
-﻿<ui:FluentWindow x:Name="GameWindow1" x:Class="YuLauncher.Game.Window.GameWindow"
+﻿<ui:FluentWindow x:Name="GameWindow1"
+                 x:Class="YuLauncher.Game.Window.GameWindow"
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,52 +9,83 @@
                  mc:Ignorable="d"
                  xmlns:properties="clr-namespace:YuLauncher.Properties"
                  xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
-                 MinWidth="800" MinHeight="400"
+                 MinWidth="800"
+                 MinHeight="400"
                  xmlns:lex="http://wpflocalizeextension.codeplex.com"
                  lex:LocalizeDictionary.DesignCulture="ja-JP"
                  lex:ResxLocalizationProvider.DefaultAssembly="YuLauncher"
                  Closing="GameWindow_OnClosing"
                  SizeChanged="GameWindow_OnSizeChanged"
-                    MouseDown= "UIElement_OnPreviewMouseLeftButtonDown"
-                 Title="GameWindow" WindowStartupLocation="CenterScreen">
+                 MouseDown="UIElement_OnPreviewMouseLeftButtonDown"
+                 Title="GameWindow"
+                 WindowStartupLocation="CenterScreen">
 
-<Grid>
-    <Grid.RowDefinitions>
-        <RowDefinition Height="50"/>
-        <RowDefinition Height="*"/>
-    </Grid.RowDefinitions>
-    
-   
-    <Grid Grid.Row="0" MouseDown="menu_OnMouseMove">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
-        </Grid.ColumnDefinitions>
-        <Menu Grid.Column="0" IsHitTestVisible="False">
-            <MenuItem Header="{lex:Loc SimpleBrowser}">
-                <MenuItem x:Name="BackItem" Header="{lex:Loc SimpleBack}" Click="BackItem_OnClick"/>
-                <MenuItem x:Name="ReloadItem" Header="{lex:Loc SimpleReload}" Click="ReloadItem_OnClick"/>
-                <MenuItem x:Name="ForwardItem" Header="{lex:Loc SimpleForward}" Click="ForwardItem_OnClick"/>
-                <MenuItem x:Name="WikiDataContentItem" Header="{lex:Loc WikiData}"/>
-            </MenuItem>
-            <MenuItem Header="{lex:Loc SimpleApplication}">
-                <MenuItem x:Name="SettingItem" Header="{lex:Loc SimpleSetting}" Click="SettingItem_OnClick"/>
-                <MenuItem x:Name="WikiDataItem" Header="{lex:Loc SimpleWikiDataManage}" Click="WikiDataItem_OnClick"/>
-            </MenuItem>
-        </Menu>
-        <StackPanel Grid.Column="1" Orientation="Horizontal">
-            <ui:Button x:Name="MinimizeBtn" Click="MinimizeBtn_OnClick">
-                <ui:FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xe921;" FontSize="20"/>
-            </ui:Button>
-            <ToggleButton x:Name="WindowStateBtn" Checked="WindowStateBtn_OnChecked" Unchecked="WindowStateBtn_OnUnchecked" IsChecked="False">
-                <ui:FontIcon x:Name="WindowStateIcon" FontFamily="Segoe Fluent Icons" FontSize="20"/>
-            </ToggleButton>
-            <ui:Button x:Name="ExitBtn" Click="ExitBtn_OnClick">
-                <ui:FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xf78a;" FontSize="20"/>
-            </ui:Button>
-        </StackPanel>
-    </Grid>
-    
-        <wv2:WebView2 Grid.Row="1"  Name="WebView"/>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+
+        <Grid Grid.Row="0"
+              MouseDown="menu_OnMouseMove">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="1"
+                        Orientation="Horizontal">
+                <ui:Button x:Name="MinimizeBtn"
+                           Click="MinimizeBtn_OnClick">
+                    <ui:FontIcon FontFamily="Segoe Fluent Icons"
+                                 Glyph="&#xe921;"
+                                 FontSize="20"/>
+                </ui:Button>
+                <ToggleButton x:Name="WindowStateBtn"
+                              Checked="WindowStateBtn_OnChecked"
+                              Unchecked="WindowStateBtn_OnUnchecked"
+                              IsChecked="False">
+                    <ui:FontIcon x:Name="WindowStateIcon"
+                                 FontFamily="Segoe Fluent Icons"
+                                 FontSize="20"/>
+                </ToggleButton>
+                <ui:Button x:Name="ExitBtn"
+                           Click="ExitBtn_OnClick">
+                    <ui:FontIcon FontFamily="Segoe Fluent Icons"
+                                 Glyph="&#xf78a;"
+                                 FontSize="20"/>
+                </ui:Button>
+            </StackPanel>
+        </Grid>
+        
+        <Grid Grid.Row="1">
+            <Menu Grid.Column="0">
+                <MenuItem Header="{lex:Loc SimpleBrowser}">
+                    <MenuItem x:Name="BackItem"
+                              Header="{lex:Loc SimpleBack}"
+                              Click="BackItem_OnClick"/>
+                    <MenuItem x:Name="ReloadItem"
+                              Header="{lex:Loc SimpleReload}"
+                              Click="ReloadItem_OnClick"/>
+                    <MenuItem x:Name="ForwardItem"
+                              Header="{lex:Loc SimpleForward}"
+                              Click="ForwardItem_OnClick"/>
+                    <MenuItem x:Name="WikiDataContentItem"
+                              Header="{lex:Loc WikiData}"/>
+                </MenuItem>
+                <MenuItem Header="{lex:Loc SimpleApplication}">
+                    <MenuItem x:Name="SettingItem"
+                              Header="{lex:Loc SimpleSetting}"
+                              Click="SettingItem_OnClick"/>
+                    <MenuItem x:Name="WikiDataItem"
+                              Header="{lex:Loc SimpleWikiDataManage}"
+                              Click="WikiDataItem_OnClick"/>
+                </MenuItem>
+            </Menu>
+        </Grid>
+
+            <wv2:WebView2 Grid.Row="2"
+                          Name="WebView"/>
     </Grid>
 </ui:FluentWindow>
